@@ -3,7 +3,7 @@
 		<td>
 			<table width="100%" cellpadding="0" cellspacing="0">
 				<tr>
-					<td width="100">
+					<td nowrap style='white-space: nowrap;' width="100">
 						Select a host:&nbsp;
 					</td>
 					<td width="1">
@@ -22,14 +22,13 @@
 
 						</select>
 					</td>
-					<td width="30"></td>
-					<td width="60">
-						Search:&nbsp;
+					<td nowrap style='white-space: nowrap;' width="60">
+						&nbsp;Search:&nbsp;
 					</td>
 					<td width="1">
 						<input type="text" name="filter" size="20" value="<?php print $_REQUEST["filter"];?>">
 					</td>
-					<td>
+					<td nowrap style='white-space: nowrap;'>
 						&nbsp;<input type="image" src="images/button_go.gif" alt="Go" border="0" align="absmiddle">
 						<input type="image" src="images/button_clear.gif" name="clear" alt="Clear" border="0" align="absmiddle">
 					</td>
