@@ -5,7 +5,7 @@
 		<td class="noprint">
 			<table width="100%" cellpadding="0" cellspacing="0">
 				<tr class="noprint">
-					<td width="100">
+					<td nowrap style='white-space: nowrap;' width="100">
 						&nbsp;<strong>Filter by host:</strong>&nbsp;
 					</td>
 					<td width="1">
@@ -23,7 +23,9 @@
 							?>
 						</select>
 					</td>
-					<td width="5"></td>
+					<td nowrap style='white-space: nowrap;' width="50">
+						&nbsp;Search&nbsp;
+					</td>
 					<td width="1">
 						<input type="text" name="filter" size="20" value="<?php print $_REQUEST["filter"];?>">
 					</td>
