@@ -3,7 +3,7 @@
 		<td>
 			<table cellpadding="0" cellspacing="0">
 				<tr>
-					<td width="20">
+					<td nowrap style='white-space: nowrap;' width="50">
 						Username:&nbsp;
 					</td>
 					<td width="1">
@@ -21,9 +21,8 @@
 							?>
 						</select>
 					</td>
-					<td width="5"></td>
-    				<td width="20">
-						Result:&nbsp;
+					<td nowrap style='white-space: nowrap;' width="50">
+						&nbsp;Result:&nbsp;
 					</td>
 					<td width="1">
 						<select name="result" onChange="applyViewLogFilterChange(document.form_userlog)">
@@ -32,14 +31,13 @@
 							<option value="0"<?php if ($_REQUEST['result'] == '0') {?> selected<?php }?>>Failed</option>
 						</select>
 					</td>
-					<td width="5"></td>
-					<td width="20">
-						Search:&nbsp;
+					<td nowrap style='white-space: nowrap;' width="50">
+						&nbsp;Search:&nbsp;
 					</td>
 					<td width="1">
 						<input type="text" name="filter" size="20" value="<?php print $_REQUEST["filter"];?>">
 					</td>
-					<td>
+					<td nowrap style='white-space: nowrap;'>
 						&nbsp;<input type="image" src="images/button_go.gif" name="go" alt="Go" border="0" align="absmiddle">
 						<input type="image" src="images/button_clear.gif" name="clear" alt="Clear" border="0" align="absmiddle">
 						<input type="image" src="images/button_purge.gif" name="purge" alt="Purge" border="0" align="absmiddle">
